Reorganize project structure with src folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Service Booking</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
 </head>
 <body>
     <div id="app">
@@ -35,12 +35,12 @@
         </main>
     </div>
     
-    <script src="js/api.js"></script>
-    <script src="js/components/navbar.js"></script>
-    <script src="js/components/vehicleList.js"></script>
-    <script src="js/components/bookingForm.js"></script>
-    <script src="js/components/serviceHistory.js"></script>
-    <script src="js/components/summaryDashboard.js"></script>
-    <script src="js/app.js"></script>
+    <script src="src/utils/api.js"></script>
+    <script src="src/components/navbar.js"></script>
+    <script src="src/components/vehicleList.js"></script>
+    <script src="src/components/bookingForm.js"></script>
+    <script src="src/components/serviceHistory.js"></script>
+    <script src="src/components/summaryDashboard.js"></script>
+    <script src="src/app.js"></script>
 </body>
 </html>
